Revision history for Catalyst-Manual

5.9009 - 2014-12-13
    - fixed a new error in the manual regarding "component" -> "components"
      (RT#99131, RT#100597, RT#100767)
    - typo fix in 09_FormFu.pod (Jason McVeigh, RT#104585)

5.9008 - 2014-07-26
    - misc small documentation tweaks (thanks Karen Etheridge, Matthew
      Horsfall, Andreas Marienborg, Dagfinn Ilmari Mannsåker, David
      Steinbrunner, Gerda Shank, Jesse)

5.9007 2013-05-06
    - Fix pod warnings (RT#83398 - thanks, Paul Waring!)
    - Fix repository metadata (thanks, Lars Dɪᴇᴄᴋᴏᴡ)

5.9006 2012-11-08
    - fix bad =head1 (Kennedy Clark)

5.9005 2012-11-01
    - Fix minor typos RT 78545, thanks Joe Axford
    - Update auth class name RT 77322 Thanks Joe Axford
    - Fix typo RT #77247 Thanks John Deighan

5.9004 4th May 2012
    - PSGI Compat changes
    - Small code changes (thanks sockmonk)
    - Small changes to Manual::Components

5.9003 17 Feb 2012
    - Mention PSGI in Manual::Ingro RT 74872 (thanks William Blunn).
    - Better docs of :Global inspired by RT 74869 (thanks William Blunn)
    - Highlight the importance of uncommenting the template line in the
      list action
    - Clarify docs for nginx in non-root - a trailing slash on the
      location block is very much needed.
    - Clarified Data::Dumper usage.  RT#71410 Thanks to Bill Corr
    - Mention Chef deployment in Manual::Deployment (thanks to Alexey
      Melezhik)

5.9002 3 Sept 2011
    - Tutorial
        - Switch to 'catalyst' vs. 'root' user in VM
        - Add notes about X Windows installation
        - Misc small adjustments

5.9001 2 Sept 2011
    - Tutorial:
        - Migrate Tutorial to use of a downloadable Virtual Machine
        - Switch tutorial to Catalyst::Plugin::StatusMessage (vs. flash
            and query parameters)
        - Switch to use of local::lib
        - Add "next chapter links" (RT #31164)
        - Test all the tutorial code and make sure it's all working