@@ -1,5 +1,7 @@
 Revision history for Catalyst-Manual
 
+    - added references to the RT issues queue, mailing list, and irc channel
+
 5.9009 - 2014-12-13
     - fixed a new error in the manual regarding "component" -> "components"
       (RT#99131, RT#100597, RT#100767)
